# ChangeLog for sys-kernel/hardened-sources
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.155 2007/05/26 20:57:12 phreak Exp $

  26 May 2007; Christian Heim <phreak@gentoo.org>
  hardened-sources-2.6.21-r2.ebuild:
  Fixing the grsecurity patch, had one '};' too much.

*hardened-sources-2.6.21-r2 (26 May 2007)

  26 May 2007; Christian Heim <phreak@gentoo.org>
  -hardened-sources-2.6.21.ebuild, -hardened-sources-2.6.21-r1.ebuild,
  +hardened-sources-2.6.21-r2.ebuild:
  Revision bump, including Linux 2.6.21.3 (fixing CVE-2007-2451). Updating the
  grsecurity patch to 2.1.10-2.6.21.1-200705221918.

*hardened-sources-2.6.20-r4 (26 May 2007)

  26 May 2007; Christian Heim <phreak@gentoo.org>
  -hardened-sources-2.6.20-r3.ebuild, +hardened-sources-2.6.20-r4.ebuild:
  Revision bump, including Linux 2.6.20.12 (which in fact fixed some security
  bugs, at the very least CVE-2007-2451). Possible candidate for stable marking.

  15 May 2007; Christian Heim <phreak@gentoo.org>
  hardened-sources-2.6.20-r3.ebuild:
  Looks like hardened-sources-2.6.20-r3 needs a new patch, as 2.6.20.11
  introduced a change in arch/sparc64/kernel/pci_iommu.c, which made the
  grsecurity patch fail in that exact same hunk.

*hardened-sources-2.6.20-r3 (15 May 2007)

  15 May 2007; Christian Heim <phreak@gentoo.org>
  +hardened-sources-2.6.20-r3.ebuild, +hardened-sources-2.6.21-r1.ebuild:
  Revision bump, incorporating Linux 2.6.20.11.

*hardened-sources-2.6.21-r1 (11 May 2007)

  11 May 2007; Christian Heim <phreak@gentoo.org>
  +hardened-sources-2.6.21-r1.ebuild:
  Revision bump, hopefully fixing the GRSECURITY/GRKERNSEC mixup pipacs
  mentioned in #177234.

  07 May 2007; Kevin F. Quinn <kevquinn@gentoo.org>
  files/digest-hardened-sources-2.6.21, Manifest:
  Fix Manifest/digest for linux-2.6.21.tar.bz2

  06 May 2007; Christian Heim <phreak@gentoo.org>
  hardened-sources-2.6.21.ebuild: