@@ -1,9 +1,0 @@
-MD5 82160e8b1c4f928cbde2fe1d180e79bc genpatches-2.6.14-13.base.tar.bz2 101369
-RMD160 2f20226bd7a6a2dda4eefa6cb80593bfaebddb8f genpatches-2.6.14-13.base.tar.bz2 101369
-SHA256 a15eb48666c21b9522b2639a3ee3e150c161ec69e70ae535ebd2e7cb9fa5a6aa genpatches-2.6.14-13.base.tar.bz2 101369
-MD5 091a6f0c1f7d913b5ed5047062081e77 hardened-patches-2.6.14-6.extras.tar.bz2 160772
-RMD160 16860d59406aa9adb8622c567df874429a999366 hardened-patches-2.6.14-6.extras.tar.bz2 160772
-SHA256 00b80b878cdddf2681202fda4d8dc8178d3938cdfb08e2f2b28ba9a0daa7f888 hardened-patches-2.6.14-6.extras.tar.bz2 160772
-MD5 66d02cbd723876c6d69846a067875a22 linux-2.6.14.tar.bz2 39172170
-RMD160 7be1f20c24f703bc0e2a25e52f68137a423dec61 linux-2.6.14.tar.bz2 39172170
-SHA256 cc56285834bed461fd405c00a34d3c3095673333b94621580eeeb0c65237af15 linux-2.6.14.tar.bz2 39172170
