@@ -1,9 +1,0 @@
-MD5 80f99e02526b3c82be494970c6e5925a genpatches-2.6.16-15.base.tar.bz2 98632
-RMD160 46e8cfcae8fea262d7599c2e4d3e7fbc8af239b2 genpatches-2.6.16-15.base.tar.bz2 98632
-SHA256 fb78f2a4d32d1770a34d9ee254686a6a12102fa99c1bb73e9c282ab5f82dddaa genpatches-2.6.16-15.base.tar.bz2 98632
-MD5 78351d9f47f19c2fb6ed7d30852bda13 hardened-patches-2.6.16-8.extras.tar.bz2 162755
-RMD160 ea628cf693730f6bbd42ccdb148569ecf5034cc4 hardened-patches-2.6.16-8.extras.tar.bz2 162755
-SHA256 5cf1136dfe9abcd480310ca4c98b00f1e09ca32dd8bc20e466f943c65499d8a1 hardened-patches-2.6.16-8.extras.tar.bz2 162755
-MD5 9a91b2719949ff0856b40bc467fd47be linux-2.6.16.tar.bz2 40845005
-RMD160 af5c2f55733fadd2fdf8b00da55e7b31d516d4e8 linux-2.6.16.tar.bz2 40845005
-SHA256 1200dcc7e60fcdaf68618dba991917a47e41e67099e8b22143976ec972e2cad7 linux-2.6.16.tar.bz2 40845005
