@@ -1,9 +1,0 @@
-MD5 4bc36d1582e8bcb7a39b4a929da93e55 genpatches-2.6.17-8.base.tar.bz2 43000
-RMD160 48058470e24dd70c9184bf044b8b42a7bd83e05a genpatches-2.6.17-8.base.tar.bz2 43000
-SHA256 9a707a5073212bb1765fcfe87ff180aa807281a7773f1cb248187d440d31ba1e genpatches-2.6.17-8.base.tar.bz2 43000
-MD5 1d51eaa16d8581dba305872dc9c42ba3 hardened-patches-2.6.17-3.extras.tar.bz2 171608
-RMD160 cf1f1a4c37115899db2b732731a249bfb311bbee hardened-patches-2.6.17-3.extras.tar.bz2 171608
-SHA256 28bde8923416cb06cac5be50d74f3d7b73bd5a8a726f8e09e404aec3b45d824f hardened-patches-2.6.17-3.extras.tar.bz2 171608
-MD5 37ddefe96625502161f075b9d907f21e linux-2.6.17.tar.bz2 41272919
-RMD160 26aad30c9a6610665c6c7d62401d79bf56a6a699 linux-2.6.17.tar.bz2 41272919
-SHA256 ab0f647d52f124958439517df9e1ae0efda90cdb851f59f522fa1749f1d87d58 linux-2.6.17.tar.bz2 41272919
