@@ -1,9 +1,0 @@
-MD5 613939a77a6fe3c426d0be13f7ac6ba5 genpatches-2.6.19-7.base.tar.bz2 53619
-RMD160 6281b30ef2d7805555fecd1566d91d445f418301 genpatches-2.6.19-7.base.tar.bz2 53619
-SHA256 c0d20d01440b67d91bfe6bc08b979eb9ed56076f3cab7a41c9055edfd5346fdf genpatches-2.6.19-7.base.tar.bz2 53619
-MD5 cee2fbdd9842955986cc6fb49f2edb20 hardened-patches-2.6.19-7.extras.tar.bz2 189087
-RMD160 d02f7653a32da5b19a27b9960373f4ce784ed997 hardened-patches-2.6.19-7.extras.tar.bz2 189087
-SHA256 c749381a8384ec9c31e801afa8943049f91a14bbb05d0a938409ae278bd75f7a hardened-patches-2.6.19-7.extras.tar.bz2 189087
-MD5 443c265b57e87eadc0c677c3acc37e20 linux-2.6.19.tar.bz2 42733268
-RMD160 75dc65b15cf9cdb359b1abe7084907982c19088b linux-2.6.19.tar.bz2 42733268
-SHA256 c2fd6bcd2b7c1b3d37d64e4d1825703792a75474830a3db7d2dc603a8d392d58 linux-2.6.19.tar.bz2 42733268
