@@ -1,9 +1,0 @@
-MD5 e0c1dd4423cd90ac67d519247617f5c4 genpatches-2.6.20-5.base.tar.bz2 57009
-RMD160 d9bfb4201547c978ad722eb86f146ec02cc81cb1 genpatches-2.6.20-5.base.tar.bz2 57009
-SHA256 3fbf02c8f6345017e756c9bf037e99f54be2af7813d7753b4b6075b4f810cd09 genpatches-2.6.20-5.base.tar.bz2 57009
-MD5 a65f4ecc3c44250eaf9949d07b962516 hardened-patches-2.6.20-1.extras.tar.bz2 214197
-RMD160 7851a618b43deb8e49251bdba7aa96f97ba11229 hardened-patches-2.6.20-1.extras.tar.bz2 214197
-SHA256 3490c1ea1ceab1382ca969d2ef90149e2f6e8203e641a8e19314a73328597fe7 hardened-patches-2.6.20-1.extras.tar.bz2 214197
-MD5 34b0f354819217e6a345f48ebbd8f13e linux-2.6.20.tar.bz2 43375937
-RMD160 14657ade7be4363143dbd5593f5710d21eda7a03 linux-2.6.20.tar.bz2 43375937
-SHA256 2c14ada1ac7d272e03b430d3a530d60fc9ec69cc8252382aa049afba7d2b8558 linux-2.6.20.tar.bz2 43375937
