@@ -1,9 +1,0 @@
-MD5 e0c1dd4423cd90ac67d519247617f5c4 genpatches-2.6.20-5.base.tar.bz2 57009
-RMD160 d9bfb4201547c978ad722eb86f146ec02cc81cb1 genpatches-2.6.20-5.base.tar.bz2 57009
-SHA256 3fbf02c8f6345017e756c9bf037e99f54be2af7813d7753b4b6075b4f810cd09 genpatches-2.6.20-5.base.tar.bz2 57009
-MD5 24584cc0c443ff62777e82d37eec761b hardened-patches-2.6.20-2.extras.tar.bz2 214435
-RMD160 9b3033732fad0456115f5b765b4015a1168dc551 hardened-patches-2.6.20-2.extras.tar.bz2 214435
-SHA256 a49de75d0b40cdc16cb47d878ac1971526ed645fc125c05597e28ce5ddb0cb6e hardened-patches-2.6.20-2.extras.tar.bz2 214435
-MD5 34b0f354819217e6a345f48ebbd8f13e linux-2.6.20.tar.bz2 43375937
-RMD160 14657ade7be4363143dbd5593f5710d21eda7a03 linux-2.6.20.tar.bz2 43375937
-SHA256 2c14ada1ac7d272e03b430d3a530d60fc9ec69cc8252382aa049afba7d2b8558 linux-2.6.20.tar.bz2 43375937
