@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/hardened-sources
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.155 2007/05/26 20:57:12 phreak Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.156 2007/05/30 18:52:50 phreak Exp $
+
+  30 May 2007; Christian Heim <phreak@gentoo.org>
+  -hardened-sources-2.6.14-r7.ebuild, -hardened-sources-2.6.16-r11.ebuild,
+  -hardened-sources-2.6.17-r1.ebuild, -hardened-sources-2.6.19-r6.ebuild,
+  -hardened-sources-2.6.20.ebuild, -hardened-sources-2.6.20-r1.ebuild:
+  Doing some cleanups, remove stale ebuilds.
 
   26 May 2007; Christian Heim <phreak@gentoo.org>
   hardened-sources-2.6.21-r2.ebuild:
